--- a/html/index.html
+++ b/html/index.html
@@ -35,5 +35,6 @@
             </section>
         </article>
     <script src="../js/editar.js"></script>
+    <script src="../js/agregar.js"></script>
 </body>
 </html>
