--- a/html/index.html
+++ b/html/index.html
@@ -36,5 +36,6 @@
         </article>
     <script src="../js/editar.js"></script>
     <script src="../js/agregar.js"></script>
+    <script src="../js/eliminar.js"></script>
 </body>
 </html>
